k8s/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: streamingapp
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: karan11619/streaming-admin:1.0.0
          ports:
            - containerPort: 3003
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3003
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3003
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi

---
apiVersion: v1
kind: Service
metadata:
  name: admin-svc
  namespace: streamingapp
spec:
  selector:
    app: admin
  ports:
    - port: 3003
      targetPort: 3003
  type: ClusterIP
