k8s/chat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  namespace: streamingapp
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
        - name: chat
          image: karan11619/streaming-chat:1.0.0
          ports:
            - containerPort: 3004
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3004
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3004
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi

---
apiVersion: v1
kind: Service
metadata:
  name: chat-svc
  namespace: streamingapp
spec:
  selector:
    app: chat
  ports:
    - port: 3004
      targetPort: 3004
  type: ClusterIP
